- edge -
Fix: combobox options for association columns didn't work properly.

v0.5.1 - 2009-09-11
Fix: crash when FormPanel has no data_class_name specified.
New: DataAccessor widgets (Form/GridPanel) now let the underlying model know which widget (i.e. which instance) accesses its data. Can be useful in virtual attributes for generating widget-specific HTML.
Fix: DataAccessor widgets (Form/GridPanel) now don't crash when calculating default columns/fields for the underlying model that has polymorphic columns.
Fix: TabPanel was sending redundant "tabchange" event to server when initially instantiated.
Fix: column filters were making GridPanel crash when the column editor was set to "textarea".
Fix: dongling comma and "delete" object properties caused problems in IE and Safari.
Fix: a stand-alone TabPanel would not render the active item.
New: BasicApp: masquerading as "World". In this mode all the "touched" persistent preferences will be overwritten for all roles and users.
Impr: configuration panel's header now shows the underlying model's name for convenience.
Fix: MasqueradeSelector widget added.

v0.5.0
2009-09-06
Major refactoring and code reorganization.
Compatibility with netzke-core v0.4.0.
New: GridPanel now supports adding/editing records in a form and extended configurable search.
New: GridPanel now can be loaded along with initial data (saves a request to the server).
New: context menu in GridPanel
New: "scopes" configuration option added to GridPanel to specify the searchlogic-compatible scope for the data.
New: "strong_default_attrs" config option added to GridPanel to specify the attributes that will be assigned to each record that is created or modified by the grid.
Usability: GridPanel's actions now get enabled/disabled according to the current selection.
Configuration panel for grids and forms now works more consistently.
New: some smart defaults for column/fields in Grid/FormPanel.