@@ -1,5 +1,6 @@
 - edge -
 Fix: combobox options for association columns didn't work properly.
+Fix: GridPanel's multi-edit functionality didn't work.
 
 v0.5.1 - 2009-09-11
 Fix: crash when FormPanel has no data_class_name specified.
